--- a/fithubwellness/package.json
+++ b/fithubwellness/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.1",
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
     "vue": "^3.2.13",
