--- a/fithubwellness/package.json
+++ b/fithubwellness/package.json
@@ -11,6 +11,7 @@
     "@auth0/auth0-vue": "^2.3.1",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "openai": "^4.0.0",
     "router": "^1.3.8",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
